@@ -29,8 +29,8 @@ import static com.oracle.svm.core.graal.nodes.WriteCodeBaseNode.writeCurrentVMCo
 import static com.oracle.svm.core.graal.nodes.WriteCurrentVMThreadNode.writeCurrentVMThread;
 import static com.oracle.svm.core.graal.nodes.WriteHeapBaseNode.writeCurrentVMHeapBase;
 import static com.oracle.svm.core.heap.RestrictHeapAccess.Access.NO_ALLOCATION;
-import static com.oracle.svm.shared.util.VMError.shouldNotReachHereUnexpectedInput;
 import static com.oracle.svm.guest.staging.Uninterruptible.CALLED_FROM_UNINTERRUPTIBLE_CODE;
+import static com.oracle.svm.shared.util.VMError.shouldNotReachHereUnexpectedInput;
 import static jdk.graal.compiler.core.common.spi.ForeignCallDescriptor.CallSideEffect.HAS_SIDE_EFFECT;
 
 import java.util.Map;
@@ -108,9 +108,9 @@ import com.oracle.svm.core.thread.VMThreads;
 import com.oracle.svm.core.thread.VMThreads.SafepointBehavior;
 import com.oracle.svm.core.threadlocal.VMThreadLocalSupport;
 import com.oracle.svm.core.util.UnsignedUtils;
-import com.oracle.svm.shared.util.VMError;
 import com.oracle.svm.guest.staging.Uninterruptible;
 import com.oracle.svm.shared.singletons.MultiLayeredImageSingleton;
+import com.oracle.svm.shared.util.VMError;
 
 import jdk.graal.compiler.api.replacements.Fold;
 import jdk.graal.compiler.api.replacements.Snippet;
@@ -461,23 +461,36 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         IsolateArgumentParser.singleton().copyToRuntimeOptions();
 
         if (parameters.isNonNull() && parameters.version() >= 3 && parameters.getArgv().isNonNull()) {
-            boolean exitWhenArgumentParsingFails = true;
+            boolean forJavaMainCall = false;
             boolean ignoreUnrecognized = false;
             if (parameters.version() >= 4) {
-                ignoreUnrecognized = parameters.getIgnoreUnrecognizedArguments();
-                exitWhenArgumentParsingFails = parameters.getExitWhenArgumentParsingFails();
+                ignoreUnrecognized = parameters.getIgnoreUnrecognizedArgs();
+                forJavaMainCall = parameters.getForJavaMainCall();
             }
 
             String[] initialArgs = ArgsSupport.convertCToJavaArgs(parameters.getArgc(), parameters.getArgv());
             ArgsSupport.singleton().setInitialArgs(initialArgs);
             try {
                 String[] remainingArgs = RuntimeOptionParser.parseAndConsumeAllOptions(initialArgs, ignoreUnrecognized);
-                if (ImageSingletons.contains(JavaMainSupport.class)) {
-                    ImageSingletons.lookup(JavaMainSupport.class).mainArgs = remainingArgs;
+                if (forJavaMainCall) {
+                    if (ImageSingletons.contains(JavaMainSupport.class)) {
+                        ImageSingletons.lookup(JavaMainSupport.class).mainArgs = remainingArgs;
+                    } else {
+                        throw VMError.shouldNotReachHereAtRuntime();
+                    }
+                } else if (!ignoreUnrecognized && remainingArgs.length != 0) {
+                    /*
+                     * GR-73367: we currently don't recognize many commonly passed VM options like
+                     * module options, -ea, or --enable-native-access at runtime, so failing here
+                     * would be disruptive to existing code
+                     *
+                     * (Note: such options are passed as args to a Java main method above)
+                     */
+                    // return CEntryPointErrors.ARGUMENT_PARSING_FAILED;
                 }
             } catch (IllegalArgumentException e) {
                 Log.logStream().println("Error: " + e.getMessage());
-                if (exitWhenArgumentParsingFails) {
+                if (forJavaMainCall) {
                     System.exit(1);
                 } else {
                     return CEntryPointErrors.ARGUMENT_PARSING_FAILED;
